スクロールビュー削除、リストビューにヘッダーフッダー追加

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,41 +15,14 @@
         android:layout_height="200dp"
         android:background="@android:color/darker_gray"/>
 
-    <ScrollView
-        android:id="@+id/scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="hogehogehoge"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="hogehogehoge"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="hogehogehoge"
-                    />
-
-            </LinearLayout>
-            <com.example.saito.listviewinscrollviewsample.MesuredListView
+            <ListView
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            </com.example.saito.listviewinscrollviewsample.MesuredListView>
+            </ListView>
         </LinearLayout>
-    </ScrollView>
 </LinearLayout>
